--- a/07.02.25.md
+++ b/07.02.25.md
@@ -1,97 +1,95 @@
-разработать диаграмму прецедентов 
-
-один человек - один вариант 
+# use case 
 
 напоминалка: 
 https://habr.com/ru/articles/566218/
 
 
-1. Интернет-магазин / Каменнский Артемий
+1. Интернет-магазин  
 Основные процессы: регистрация пользователя, добавление товара в корзину, оформление заказа, оплата, возврат товара.
 
-2. Система бронирования отелей / Дрогонина Вероника
+2. Система бронирования отелей   
 Основные процессы: поиск номеров, бронирование, отмена бронирования, оплата, регистрация пользователя.
 
-3. Онлайн-банкинг / Абдыбахапов
+3. Онлайн-банкинг   
 Основные процессы: просмотр баланса, перевод средств, пополнение счёта, закрытие счёта, установка лимитов.
 
-4. Система управления проектами / Арнаут Иван 
+4. Система управления проектами    
 Основные процессы: создание проекта, назначение задач, контроль выполнения, комментарии к задачам, отчёты.
 
-5. Мобильное приложение для фитнеса / Ахмедов Магомед
+5. Мобильное приложение для фитнеса   
 Основные процессы: регистрация тренировки, добавление целей, отслеживание прогресса, просмотр статистики, получение уведомлений.
 
-6. Электронная библиотека / Стратулат
+6. Электронная библиотека  
 Основные процессы: поиск книг, бронирование книг, продление срока возврата, добавление отзывов, оплата штрафов.
 
-7. Система управления учебным процессом / Юрченко
+7. Система управления учебным процессом   
 Основные процессы: регистрация студентов, управление курсами, публикация материалов, сдача заданий, просмотр оценок.
 
-8. Медицинская информационная система
+8. Медицинская информационная система  
 Основные процессы: запись на приём, просмотр истории болезни, назначение лечения, получение результатов анализов.
 
-9. Система аренды автомобилей / Тусматов Фирдавс
+9. Система аренды автомобилей  
 Основные процессы: поиск автомобилей, бронирование, оплата аренды, продление срока аренды, возврат автомобиля.
 
-10. Социальная сеть / Уленкова Кристина
+10. Социальная сеть   
 Основные процессы: создание профиля, добавление друзей, отправка сообщений, публикация постов, настройка приватности.
 
-11. Платформа онлайн-курсов / Пашин
+11. Платформа онлайн-курсов  
 Основные процессы: регистрация на курс, просмотр лекций, выполнение домашних заданий, сдача экзаменов, получение сертификата.
 
-12. Система доставки еды / Гунин
+12. Система доставки еды   
 Основные процессы: выбор ресторана, оформление заказа, оплата, отслеживание доставки, оставление отзыва.
 
-13. Информационная система университета / Омурзакова Сима
+13. Информационная система университета   
 Основные процессы: регистрация на курсы, просмотр расписания, сдача экзаменов, получение диплома, общение с преподавателем.
 
-14. Система управления библиотекой / Банковский Олег
+14. Система управления библиотекой   
 Основные процессы: регистрация читателя, поиск книги, выдача книг, возврат, учёт задолженностей.
 
-15. Программа для управления личными финансами / Данилов Олег
+15. Программа для управления личными финансами   
 Основные процессы: создание бюджета, добавление расходов, планирование доходов, анализ затрат, получение отчетов.
 
-16. Онлайн-сервис для организации мероприятий
+16. Онлайн-сервис для организации мероприятий  
 Основные процессы: создание мероприятия, приглашение участников, регистрация, покупка билетов, отчеты о посещаемости.
 
-17. Платформа для онлайн-обучения детей / Хомидов Сардорбек
+17. Платформа для онлайн-обучения детей   
 Основные процессы: регистрация ученика, выполнение заданий, участие в викторинах, просмотр прогресса, общение с учителем.
 
-18. CRM-система для бизнеса / Мардарь Виталий
+18. CRM-система для бизнеса   
 Основные процессы: создание клиента, управление продажами, отправка коммерческих предложений, создание задач, отчёты о продажах.
 
-19. Система электронной почты / Умаров Диёрбек
+19. Система электронной почты   
 Основные процессы: отправка писем, получение писем, фильтрация спама, создание папок, управление контактами.
 
-20. Платежная система / Магарамов Исмаил
+20. Платежная система   
 Основные процессы: перевод средств, создание счета, оплата услуг, история операций, блокировка счёта.
 
-21. Мобильное приложение для покупки билетов на транспорт / Овсянников
+21. Мобильное приложение для покупки билетов на транспорт  
 Основные процессы: выбор маршрута, покупка билета, получение уведомлений, проверка билета контролёром, возврат билета.
 
-22. Система управления инвентарём / Исаев Мовсар
+22. Система управления инвентарём   
 Основные процессы: добавление товаров на склад, списание товаров, инвентаризация, контроль остатков, генерация отчетов.
 
-23. Система онлайн-консультаций / Семко Максим
+23. Система онлайн-консультаций   
 Основные процессы: регистрация консультанта, запись на консультацию, проведение консультации, оплата услуг, отзывы клиентов.
 
-24. Программное обеспечение для видеомонтажа / Исаев Всеволод
+24. Программное обеспечение для видеомонтажа   
 Основные процессы: импорт видео, нарезка, добавление эффектов, экспорт проекта, публикация на платформу.
 
-25. Система контроля доступа на предприятие / Махмудов Саид 
+25. Система контроля доступа на предприятие   
 Основные процессы: регистрация сотрудников, выдача пропусков, установка уровней доступа, контроль входов, генерация отчетов.
 
-26. Приложение для бронирования билетов в кинотеатр / Иванченко Карина
+26. Приложение для бронирования билетов в кинотеатр   
 Основные процессы: выбор фильма, покупка билетов, выбор места, получение электронного билета, отмена бронирования.
 
-27. Мобильное приложение для каршеринга / Шихалиев Нурмагомед 
+27. Мобильное приложение для каршеринга   
 Основные процессы: поиск автомобиля, бронирование, начало аренды, оплата, завершение аренды.
 
-28. Система управления рестораном / Барган
+28. Система управления рестораном     
 Основные процессы: бронирование столиков, заказ блюд, учёт клиентов, оплата, получение обратной связи.
 
-29. Онлайн-сервис по поиску работы / Марасулов Азизбек
+29. Онлайн-сервис по поиску работы   
 Основные процессы: создание профиля, размещение вакансий, отклик на вакансии, поиск работы, получение уведомлений.
 
-30. Система управления жилым комплексом / Смирнова Светлана
+30. Система управления жилым комплексом  
 Основные процессы: регистрация жильцов, оплата коммунальных услуг, подача заявок на ремонт, получение уведомлений, отчетность управляющей компании.
